# bank_AI_chatbot

./: README.md
bkchatbot/: pyproject.toml
bkchatbot/bkchatbot/: deepseek_bot_需先run ollama.py  llama31_hugingface_4bit_最終版.py  llama31_hugingface_4bit_最終版加動畫.py  llama31_hugingface_4bit_最終版加動畫_提示修改中.py  llama31_hugingface_4bit_生成正常.py  server.py  two_llm_需先run ollama.py
bkchatbot/bkchatbot/handler/: audio_hadnler.py  text_handler.py
bkchatbot/configs/: setting.py
bkchatbot/services/: qdrant_service.py
bkchatbot/tests/: test.py  test2.py
bkchatbot/text_pre/: qdrant_final_text_up.py  qdrant_up.py  文本處理.py
